# py-build-example

./: README.md  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
mycoolapp/: main.py
